renamed all instances of car_uid in codebase

--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "def pullAgRegions(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
-    "    regionQuery = sq.text(\"select car_uid, geometry FROM public.census_ag_regions\")\n",
+    "    regionQuery = sq.text(\"select district, geometry FROM public.census_ag_regions\")\n",
     "\n",
     "    return gpd.GeoDataFrame.from_postgis(\n",
     "        regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
@@ -65,17 +65,17 @@
    "outputs": [],
    "source": [
     "def calcUIDs(ergot: pd.DataFrame) -> pd.DataFrame:\n",
-    "    ergot.loc[ergot[\"province\"] == \"MB\", \"car_uid\"] = (\n",
+    "    ergot.loc[ergot[\"province\"] == \"MB\", \"district\"] = (\n",
     "        ergot.loc[ergot[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
     "    )\n",
-    "    ergot.loc[ergot[\"province\"] == \"SK\", \"car_uid\"] = (\n",
+    "    ergot.loc[ergot[\"province\"] == \"SK\", \"district\"] = (\n",
     "        ergot.loc[ergot[\"province\"] == \"SK\", \"crop_district\"] - 1\n",
     "    ) + 4700\n",
-    "    ergot.loc[ergot[\"province\"] == \"AB\", \"car_uid\"] = (\n",
+    "    ergot.loc[ergot[\"province\"] == \"AB\", \"district\"] = (\n",
     "        ergot.loc[ergot[\"province\"] == \"AB\", \"crop_district\"] * 10\n",
     "    ) + 4800\n",
     "\n",
-    "    ergot[[\"car_uid\"]] = ergot[[\"car_uid\"]].astype(int)\n",
+    "    ergot[[\"district\"]] = ergot[[\"district\"]].astype(int)\n",
     "\n",
     "    return ergot"
    ]
@@ -94,9 +94,9 @@
     "\n",
     "        for index2, agRegion2 in agRegions.iterrows():\n",
     "            if agRegion1[\"geometry\"].touches(agRegion2[\"geometry\"]):\n",
-    "                currTouches.append(agRegion2[\"car_uid\"])\n",
+    "                currTouches.append(agRegion2[\"district\"])\n",
     "\n",
-    "        touches[str(agRegion1[\"car_uid\"])] = currTouches\n",
+    "        touches[str(agRegion1[\"district\"])] = currTouches\n",
     "\n",
     "    return touches"
    ]
@@ -123,61 +123,61 @@
     "    ergot[\"severity_in_neighbor\"] = 0\n",
     "\n",
     "    for year in ergot[\"year\"].unique():\n",
-    "        for uid in ergot[\"car_uid\"].unique():\n",
+    "        for uid in ergot[\"district\"].unique():\n",
     "            # load the current ag_region samples\n",
-    "            currSamples = ergot.query(f\"year == {year} and car_uid == {uid}\")\n",
+    "            currSamples = ergot.query(f\"year == {year} and district == {uid}\")\n",
     "\n",
     "            # load the neighbors samples\n",
     "            neighborSamples = ergot.query(\n",
-    "                f\"year == {year} and car_uid in {touches[str(uid)]}\"\n",
+    "                f\"year == {year} and district in {touches[str(uid)]}\"\n",
     "            )\n",
     "\n",
     "            # load last years samples\n",
-    "            prev1Year = ergot.query(f\"year == {year - 1} and car_uid == {uid}\")\n",
+    "            prev1Year = ergot.query(f\"year == {year - 1} and district == {uid}\")\n",
     "\n",
     "            # load the samples from 2 years ago\n",
-    "            prev2Year = ergot.query(f\"year == {year - 2} and car_uid == {uid}\")\n",
+    "            prev2Year = ergot.query(f\"year == {year - 2} and district == {uid}\")\n",
     "\n",
     "            # load the samples from 3 years ago\n",
-    "            prev3Year = ergot.query(f\"year == {year - 3} and car_uid == {uid}\")\n",
+    "            prev3Year = ergot.query(f\"year == {year - 3} and district == {uid}\")\n",
     "\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"percnt_true\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"percnt_true\"\n",
     "            ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"has_ergot\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"has_ergot\"\n",
     "            ] = (currSamples[\"incidence\"].sum() > 0)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"sum_severity\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"sum_severity\"\n",
     "            ] = currSamples[\"severity\"].sum()\n",
     "\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev1\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev1\"\n",
     "            ] = (prev1Year[\"incidence\"].sum() > 0)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev2\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev2\"\n",
     "            ] = (prev2Year[\"incidence\"].sum() > 0)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev3\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev3\"\n",
     "            ] = (prev3Year[\"incidence\"].sum() > 0)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid),\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
     "                \"present_in_neighbor\",\n",
     "            ] = (\n",
     "                neighborSamples[\"incidence\"].sum() > 0\n",
     "            )\n",
     "\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev1\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev1\"\n",
     "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev2\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev2\"\n",
     "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev3\"\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev3\"\n",
     "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
     "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid),\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
     "                \"severity_in_neighbor\",\n",
     "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples.index)\n",
     "\n",
