--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "# loads the agriculture regions from the datbase (projection is EPSG:3347)\n",
     "def loadGeometry(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
-    "    query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")\n",
+    "    query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")\n",
     "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "        query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
@@ -201,7 +201,7 @@
     "    df.drop(columns=[\"geometry\", \"index_right\", \"lat\", \"lon\"], inplace=True)\n",
     "    df = df[df[\"cr_num\"].notna()]  # Take rows that are valid numbers\n",
     "    df[[\"cr_num\"]] = df[[\"cr_num\"]].astype(int)\n",
-    "    df[[\"car_uid\"]] = df[[\"car_uid\"]].astype(int)\n",
+    "    df[[\"district\"]] = df[[\"district\"]].astype(int)\n",
     "\n",
     "    return df"
    ]
@@ -322,7 +322,7 @@
     "def generateDailyAggregate(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
     "        aggregate = (\n",
-    "            df.groupby([\"year\", \"month\", \"day\", \"cr_num\", \"car_uid\"])\n",
+    "            df.groupby([\"year\", \"month\", \"day\", \"cr_num\", \"district\"])\n",
     "            .agg(\n",
     "                {\n",
     "                    \"dewpoint_temperature\": [\"min\", \"max\", \"mean\"],\n",
@@ -409,7 +409,7 @@
     "            \"month\",\n",
     "            \"day\",\n",
     "            \"cr_num\",\n",
-    "            \"car_uid\",\n",
+    "            \"district\",\n",
     "        ]\n",
     "        all_columns.extend(columns)\n",
     "        aggregate.columns = Index(all_columns)\n",
