--- a/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "sm_df = (\n",
-    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"])\n",
+    "    sm_df.groupby([\"date\", \"cr_num\", \"district\"])\n",
     "    .agg({\"soil_moisture\": [\"min\", \"max\", \"mean\"]})\n",
     "    .reset_index()\n",
     ")\n",
