--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regionQuery = sq.text(\"select car_uid, color, geometry FROM public.census_ag_regions\")\n",
+    "regionQuery = sq.text(\"select district, color, geometry FROM public.census_ag_regions\")\n",
     "agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "    regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     ")"
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agRegions.loc[agRegions[\"car_uid\"] == 4612, \"color\"] = \"white\""
+    "agRegions.loc[agRegions[\"district\"] == 4612, \"color\"] = \"white\""
    ]
   },
   {
@@ -148,7 +148,7 @@
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
     "agRegions.apply(\n",
     "    lambda x: ax.annotate(\n",
-    "        text=x[\"car_uid\"],\n",
+    "        text=x[\"district\"],\n",
     "        xy=x.geometry.centroid.coords[0],\n",
     "        ha=\"center\",\n",
     "        color=\"black\",\n",
@@ -487,7 +487,7 @@
    "outputs": [],
    "source": [
     "for index, row in agRegions.iterrows():\n",
-    "    currDistrict = row[\"car_uid\"]\n",
+    "    currDistrict = row[\"district\"]\n",
     "    province = \"SK\"\n",
     "\n",
     "    if currDistrict < 4700:\n",
