--- a/src/WeatherStation/modDist4841.ipynb
+++ b/src/WeatherStation/modDist4841.ipynb
@@ -130,21 +130,21 @@
     "\n",
     "    # get both rows corresponding to district 4840 and 4841 respectively\n",
     "    districts4841And4840 = agRegions.loc[\n",
-    "        (agRegions[\"car_uid\"] == 4840) | (agRegions[\"car_uid\"] == 4841)\n",
+    "        (agRegions[\"district\"] == 4840) | (agRegions[\"district\"] == 4841)\n",
     "    ]\n",
     "\n",
     "    # merge their geometries into the row with district 4840\n",
     "    agRegions.loc[\n",
-    "        agRegions[\"car_uid\"] == 4840, \"geometry\"\n",
+    "        agRegions[\"district\"] == 4840, \"geometry\"\n",
     "    ] = districts4841And4840.unary_union\n",
     "\n",
     "    # update the name to reflect the entirety of the district\n",
     "    agRegions.loc[\n",
-    "        agRegions[\"car_uid\"] == 4840, \"car_name\"\n",
+    "        agRegions[\"district\"] == 4840, \"car_name\"\n",
     "    ] = \"Census Agricultural Region 4\"\n",
     "\n",
     "    # delete district 4841 which is now apart of 4840\n",
-    "    agRegions.drop(agRegions.loc[agRegions[\"car_uid\"] == 4841].index)\n",
+    "    agRegions.drop(agRegions.loc[agRegions[\"district\"] == 4841].index)\n",
     "\n",
     "    # rename the car_uid column to district\n",
     "    agRegions.rename(columns={\"car_uid\": \"district\"}, inplace=True)\n",
