--- a/src/importSoil/labelSoil.ipynb
+++ b/src/importSoil/labelSoil.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# load the boundaries for the agriculture regions\n",
-    "query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")  # type: ignore\n",
+    "query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")  # type: ignore\n",
     "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore"
    ]
   },
@@ -188,7 +188,7 @@
     "labeledSoil.rename(columns={labeledSoil.columns[0]: \"id\"}, inplace=True)\n",
     "labeledSoil.rename(columns={labeledSoil.columns[2]: \"soil_ids\"}, inplace=True)\n",
     "\n",
-    "labeledSoil[[\"car_uid\"]] == labeledSoil[[\"car_uid\"]].astype(int)"
+    "labeledSoil[[\"district\"]] == labeledSoil[[\"district\"]].astype(int)"
    ]
   },
   {
