--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def get_agriculture_regions(conn):\n",
-    "    query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")\n",
+    "    query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")\n",
     "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "        query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
