--- a/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# query to pull ag_region from database\n",
-    "query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")\n",
+    "query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")\n",
     "agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "    query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     ")"
