--- a/src/Visualization/ergot_visualization.ipynb
+++ b/src/Visualization/ergot_visualization.ipynb
@@ -4,16 +4,34 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/student/maith/CGC_Grain_Outcome_Predictions/.venv/lib/python3.10/site-packages/geopandas/_compat.py:124: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
+      "  warnings.warn(\n",
+      "/tmp/ipykernel_4049882/1550562114.py:5: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "\n",
+      "import os\n",
+      "os.environ['USE_PYGEOS'] = '0'\n",
+      "import geopandas\n",
+      "\n",
+      "In the next release, GeoPandas will switch to using Shapely by default, even if PyGEOS is installed. If you only have PyGEOS installed to get speed-ups, this switch should be smooth. However, if you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+      "  import geopandas as gpd\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "\n",
+    "import geopandas as gpd\n",
     "import sqlalchemy as sq\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
+    "from matplotlib import cm, colors\n",
     "\n",
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
@@ -226,9 +244,15 @@
    "outputs": [],
    "source": [
     "# car : canadian agriculture region\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"car_uid\"] = ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"car_uid\"] = (ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"crop_district\"] - 1) + 4700\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"car_uid\"] = (ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"crop_district\"] * 10) + 4800"
+    "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"car_uid\"] = (\n",
+    "    ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
+    ")\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"car_uid\"] = (\n",
+    "    ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"crop_district\"] - 1\n",
+    ") + 4700\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"car_uid\"] = (\n",
+    "    ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"crop_district\"] * 10\n",
+    ") + 4800"
    ]
   },
   {
@@ -237,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergot_df.drop(columns=['crop_district', 'sample_id'], inplace=True)"
+    "ergot_df.drop(columns=[\"crop_district\", \"sample_id\"], inplace=True)"
    ]
   },
   {
@@ -390,13 +414,13 @@
     }
    ],
    "source": [
-    "ergot_df['car_uid'] = pd.to_numeric(ergot_df['car_uid'], downcast='integer')\n",
+    "ergot_df[\"car_uid\"] = pd.to_numeric(ergot_df[\"car_uid\"], downcast=\"integer\")\n",
     "ergot_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,30 +436,35 @@
    ],
    "source": [
     "# sample with incidence = True: per year, per province\n",
-    "samples_df = ergot_df[ergot_df['incidence'] == True].groupby(['province', 'year'])['incidence'].count().reset_index()\n",
-    "mb_df = samples_df[samples_df['province'] == 'MB']\n",
-    "ab_df = samples_df[samples_df['province'] == 'AB']\n",
-    "sk_df = samples_df[samples_df['province'] == 'SK']\n",
+    "samples_df = (\n",
+    "    ergot_df[ergot_df[\"incidence\"] == True]\n",
+    "    .groupby([\"province\", \"year\"])[\"incidence\"]\n",
+    "    .count()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "mb_df = samples_df[samples_df[\"province\"] == \"MB\"]\n",
+    "ab_df = samples_df[samples_df[\"province\"] == \"AB\"]\n",
+    "sk_df = samples_df[samples_df[\"province\"] == \"SK\"]\n",
     "\n",
-    "year = mb_df['year'].tolist()\n",
-    "mb_incidence = mb_df['incidence'].tolist()\n",
-    "ab_incidence = ab_df['incidence'].tolist()\n",
-    "sk_incidence = sk_df['incidence'].tolist()\n",
+    "year = mb_df[\"year\"].tolist()\n",
+    "mb_incidence = mb_df[\"incidence\"].tolist()\n",
+    "ab_incidence = ab_df[\"incidence\"].tolist()\n",
+    "sk_incidence = sk_df[\"incidence\"].tolist()\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(10,5))\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Incidence')\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Incidence\")\n",
     "plt.plot(year, mb_incidence, color=\"blue\")\n",
     "plt.plot(year, ab_incidence, color=\"green\")\n",
     "plt.plot(year, sk_incidence, color=\"red\")\n",
-    "plt.legend(['Manitoba', 'Alberta', 'Saskatchewan'])\n",
-    "plt.show()\n"
+    "plt.legend([\"Manitoba\", \"Alberta\", \"Saskatchewan\"])\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -553,21 +582,21 @@
        "[84 rows x 3 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratio_df = ergot_df.groupby(['province', 'year'])['incidence'].count().reset_index()\n",
-    "ratio_df['ratio'] = (samples_df['incidence']/ratio_df['incidence']).to_frame()\n",
-    "ratio_df.drop(columns = {'incidence'}, inplace=True)\n",
+    "ratio_df = ergot_df.groupby([\"province\", \"year\"])[\"incidence\"].count().reset_index()\n",
+    "ratio_df[\"ratio\"] = (samples_df[\"incidence\"] / ratio_df[\"incidence\"]).to_frame()\n",
+    "ratio_df.drop(columns={\"incidence\"}, inplace=True)\n",
     "ratio_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -595,27 +624,293 @@
    ],
    "source": [
     "# Min, max for each province\n",
-    "mb_ratio = ratio_df[ratio_df['province'] == 'MB']['ratio'].tolist()\n",
-    "ab_ratio = ratio_df[ratio_df['province'] == 'AB']['ratio'].tolist()\n",
-    "sk_ratio = ratio_df[ratio_df['province'] == 'SK']['ratio'].tolist()\n",
+    "mb_ratio = ratio_df[ratio_df[\"province\"] == \"MB\"][\"ratio\"].tolist()\n",
+    "ab_ratio = ratio_df[ratio_df[\"province\"] == \"AB\"][\"ratio\"].tolist()\n",
+    "sk_ratio = ratio_df[ratio_df[\"province\"] == \"SK\"][\"ratio\"].tolist()\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(10,5))\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Incidence')\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Incidence\")\n",
     "plt.plot(year, mb_ratio, color=\"blue\")\n",
     "plt.plot(year, ab_ratio, color=\"green\")\n",
     "plt.plot(year, sk_ratio, color=\"red\")\n",
-    "plt.legend(['Manitoba', 'Alberta', 'Saskatchewan'])\n",
+    "plt.legend([\"Manitoba\", \"Alberta\", \"Saskatchewan\"])\n",
     "plt.show()\n",
     "\n",
-    "print('Highest ratio in MB: {}, in year: {}'.format(max(mb_ratio), mb_ratio.index(max(mb_ratio)) + 1995))\n",
-    "print('Highest ratio in AB: {}, in year: {}'.format(max(ab_ratio), ab_ratio.index(max(ab_ratio)) + 1995))\n",
-    "print('Highest ratio in SK: {}, in year: {}'.format(max(sk_ratio), sk_ratio.index(max(sk_ratio)) + 1995))\n",
+    "print(\n",
+    "    \"Highest ratio in MB: {}, in year: {}\".format(\n",
+    "        max(mb_ratio), mb_ratio.index(max(mb_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Highest ratio in AB: {}, in year: {}\".format(\n",
+    "        max(ab_ratio), ab_ratio.index(max(ab_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Highest ratio in SK: {}, in year: {}\".format(\n",
+    "        max(sk_ratio), sk_ratio.index(max(sk_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "print('Lowest ratio in MB: {}, in year: {}'.format(min(mb_ratio), mb_ratio.index(min(mb_ratio)) + 1995))\n",
-    "print('Lowest ratio in AB: {}, in year: {}'.format(min(ab_ratio), ab_ratio.index(min(ab_ratio)) + 1995))\n",
-    "print('Lowest ratio in SK: {}, in year: {}'.format(min(sk_ratio), sk_ratio.index(min(sk_ratio)) + 1995))"
+    "print(\n",
+    "    \"Lowest ratio in MB: {}, in year: {}\".format(\n",
+    "        min(mb_ratio), mb_ratio.index(min(mb_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Lowest ratio in AB: {}, in year: {}\".format(\n",
+    "        min(ab_ratio), ab_ratio.index(min(ab_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Lowest ratio in SK: {}, in year: {}\".format(\n",
+    "        min(sk_ratio), sk_ratio.index(min(sk_ratio)) + 1995\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province</th>\n",
+       "      <th>year</th>\n",
+       "      <th>car_uid</th>\n",
+       "      <th>incidence</th>\n",
+       "      <th>ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>4830</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.925926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>4840</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.092050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>4850</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.970874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.098901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>4820</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.754386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>876</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4771</td>\n",
+       "      <td>47</td>\n",
+       "      <td>34.306569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4780</td>\n",
+       "      <td>43</td>\n",
+       "      <td>28.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>878</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4781</td>\n",
+       "      <td>37</td>\n",
+       "      <td>43.529412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>879</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4790</td>\n",
+       "      <td>27</td>\n",
+       "      <td>30.337079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>880</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4791</td>\n",
+       "      <td>29</td>\n",
+       "      <td>32.584270</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>881 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    province  year  car_uid  incidence      ratio\n",
+       "0         AB  1995     4830          2   0.925926\n",
+       "1         AB  1995     4840          5   2.092050\n",
+       "2         AB  1995     4850          2   0.970874\n",
+       "3         AB  1995     4870          1   1.098901\n",
+       "4         AB  1996     4820          1   1.754386\n",
+       "..       ...   ...      ...        ...        ...\n",
+       "876       SK  2022     4771         47  34.306569\n",
+       "877       SK  2022     4780         43  28.666667\n",
+       "878       SK  2022     4781         37  43.529412\n",
+       "879       SK  2022     4790         27  30.337079\n",
+       "880       SK  2022     4791         29  32.584270\n",
+       "\n",
+       "[881 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_df = ergot_df.groupby([\"year\", \"car_uid\"])[\"incidence\"].count().reset_index()\n",
+    "region_df = (\n",
+    "    ergot_df[ergot_df[\"incidence\"] == True]\n",
+    "    .groupby([\"province\", \"year\", \"car_uid\"])[\"incidence\"]\n",
+    "    .count()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "region_df[\"ratio\"] = (region_df[\"incidence\"] / total_df[\"incidence\"]) * 100\n",
+    "region_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regionQuery = sq.text(\"select district, color, geometry FROM public.census_ag_regions\")\n",
+    "agRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "    regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def color_map_color(value, cmap_name=\"Wistia\", vmin=0, vmax=100):\n",
+    "    norm = colors.Normalize(vmin=vmin, vmax=vmax)\n",
+    "    cmap = cm.get_cmap(cmap_name)\n",
+    "    rgb = cmap(norm(abs(value)))[:3]\n",
+    "    color = colors.rgb2hex(rgb)\n",
+    "    return color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_color(ratio_year):\n",
+    "    color_map = []\n",
+    "    for district in agRegions[\"district\"].tolist():\n",
+    "        if district in ratio_year[\"car_uid\"].tolist():\n",
+    "            ratio = ratio_year[ratio_year[\"car_uid\"] == district][\"ratio\"].tolist()[0]\n",
+    "            color_map.append(color_map_color(ratio))\n",
+    "        else:\n",
+    "            color_map.append(color_map_color(0))\n",
+    "    return pd.Series(color_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_map(color_map, year):\n",
+    "    minx, miny, maxx, maxy = agRegions.total_bounds\n",
+    "    fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "    ax.set_ylim(miny, maxy)\n",
+    "    ax.set_xlim(minx, maxx)\n",
+    "    ax.set_title(\"Incident level for district in \" + str(year))\n",
+    "    agRegions.plot(ax=ax, color=color_map, edgecolor=\"black\")\n",
+    "    agRegions.apply(\n",
+    "        lambda x: ax.annotate(\n",
+    "            text=x[\"district\"],\n",
+    "            xy=x.geometry.centroid.coords[0],\n",
+    "            ha=\"center\",\n",
+    "            color=\"black\",\n",
+    "            size=10,\n",
+    "        ),\n",
+    "        axis=1,\n",
+    "    )\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(1995, 2023):\n",
+    "    ratio_year = region_df.loc[region_df[\"year\"] == year]\n",
+    "    color = get_color(ratio_year)\n",
+    "    plot_map(color, year)"
    ]
   }
  ],
