Dane/mod car uid (#63)
merge 4841 and 4840 for simpler data handling

--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -112,40 +112,63 @@
     "    ergotList = []\n",
     "\n",
     "    for year in ergot[\"year\"].unique():\n",
-    "        for district in ergot[\"district\"].unique():\n",
+    "        for uid in ergot[\"district\"].unique():\n",
     "            # load the current ag_region samples\n",
-    "            currSamples = ergot.query(f\"year == {year} and district == {district}\")\n",
+    "            currSamples = ergot.query(f\"year == {year} and district == {uid}\")\n",
     "\n",
     "            # load the neighbors samples\n",
     "            neighborSamples = ergot.query(\n",
-    "                f\"year == {year} and district in {touches[str(district)]}\"\n",
+    "                f\"year == {year} and district in {touches[str(uid)]}\"\n",
     "            )\n",
     "\n",
-    "            # load samples for some of the previous years\n",
-    "            prev1Year = ergot.query(f\"year == {year - 1} and district == {district}\")\n",
-    "            prev2Year = ergot.query(f\"year == {year - 2} and district == {district}\")\n",
-    "            prev3Year = ergot.query(f\"year == {year - 3} and district == {district}\")\n",
+    "            # load last years samples\n",
+    "            prev1Year = ergot.query(f\"year == {year - 1} and district == {uid}\")\n",
     "\n",
-    "            currEntry = {\n",
-    "                \"year\": year,\n",
-    "                \"district\": district,\n",
-    "                \"percnt_true\": currSamples[\"incidence\"].sum() / len(currSamples),\n",
-    "                \"has_ergot\": currSamples[\"incidence\"].sum() > 0,\n",
-    "                \"sum_severity\": currSamples[\"severity\"].sum(),\n",
-    "                \"present_prev1\": prev1Year[\"incidence\"].sum() > 0,\n",
-    "                \"present_prev2\": prev2Year[\"incidence\"].sum() > 0,\n",
-    "                \"present_prev3\": prev3Year[\"incidence\"].sum() > 0,\n",
-    "                \"present_in_neighbor\": neighborSamples[\"incidence\"].sum() > 0,\n",
-    "                \"severity_prev1\": prev1Year[\"incidence\"].sum() / len(prev1Year),\n",
-    "                \"severity_prev2\": prev2Year[\"incidence\"].sum() / len(prev2Year),\n",
-    "                \"severity_prev3\": prev3Year[\"incidence\"].sum() / len(prev3Year),\n",
-    "                \"severity_in_neighbor\": neighborSamples[\"incidence\"].sum()\n",
-    "                / len(neighborSamples),\n",
-    "            }\n",
+    "            # load the samples from 2 years ago\n",
+    "            prev2Year = ergot.query(f\"year == {year - 2} and district == {uid}\")\n",
     "\n",
-    "            ergotList.append(currEntry)\n",
+    "            # load the samples from 3 years ago\n",
+    "            prev3Year = ergot.query(f\"year == {year - 3} and district == {uid}\")\n",
     "\n",
-    "    aggErgot = pd.DataFrame(ergotList)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"percnt_true\"\n",
+    "            ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"has_ergot\"\n",
+    "            ] = (currSamples[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"sum_severity\"\n",
+    "            ] = currSamples[\"severity\"].sum()\n",
+    "\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev1\"\n",
+    "            ] = (prev1Year[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev2\"\n",
+    "            ] = (prev2Year[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev3\"\n",
+    "            ] = (prev3Year[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
+    "                \"present_in_neighbor\",\n",
+    "            ] = (\n",
+    "                neighborSamples[\"incidence\"].sum() > 0\n",
+    "            )\n",
+    "\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev1\"\n",
+    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev2\"\n",
+    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev3\"\n",
+    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
+    "                \"severity_in_neighbor\",\n",
+    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples.index)\n",
     "\n",
     "    # set any unexpected values to 0\n",
     "    aggErgot.loc[aggErgot[\"percnt_true\"].isna(), \"percnt_true\"] = 0\n",
