--- a/src/extra/labelSoil.ipynb
+++ b/src/extra/labelSoil.ipynb
@@ -60,10 +60,8 @@
    "outputs": [],
    "source": [
     "# load the boundaries for the agriculture regions\n",
-    "regionQuery = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")\n",
-    "agRegions = gpd.GeoDataFrame.from_postgis(\n",
-    "    regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
-    ")"
+    "query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")  # type: ignore\n",
+    "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore"
    ]
   },
   {
