--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -32,13 +32,15 @@
     "# @title Import relevant modules\n",
     "import os\n",
     "import sys\n",
-    "import pandas as pd\n",
+    "import pandas as pd  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
     "import black\n",
     "import jupyter_black as bl  # type: ignore\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "from dotenv import load_dotenv\n",
+    "\n",
+    "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
    ]
   },
@@ -62,9 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../../src\")\n",
     "bl.load()\n",
-    "load_dotenv(\"docker/.env\")\n",
+    "load_dotenv(\"../docker/.env\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
     "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
@@ -82,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regions = \"WeatherStation/data/2006CensusAgRegions/gcar000b07a_e.shp\"\n",
+    "regions = \"data/2006CensusAgRegions/gcar000b07a_e.shp\"\n",
     "gdfRegions = gpd.read_file(regions, encoding=\"utf-8\")"
    ]
   },
@@ -93,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations = \"WeatherStation/data/climate_station_list.csv\"\n",
+    "stations = \"data/climate_station_list.csv\"\n",
     "dfStations = pd.read_csv(stations)"
    ]
   },
@@ -511,10 +512,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfProjected.rename(columns={\"CARuid\": \"car_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={\"CARuid\": \"district\"}, inplace=True)\n",
     "gdfProjected.rename(columns={\"CARname\": \"car_name\"}, inplace=True)\n",
     "gdfProjected.rename(columns={\"PRuid\": \"pr_uid\"}, inplace=True)\n",
-    "gdfProjected.rename(columns={\"AGuid\": \"ag_uid\"}, inplace=True)"
+    "gdfProjected.rename(columns={\"AGuid\": \"ag_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={\"CRnum\": \"cr_num\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a911830b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get both rows corresponding to district 4840 and 4841 respectively\n",
+    "districts4841And4840 = gdfProjected.loc[\n",
+    "    (gdfProjected[\"district\"] == 4840) | (gdfProjected[\"district\"] == 4841)\n",
+    "]\n",
+    "\n",
+    "# merge their geometries into the row with district 4840\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"district\"] == 4840, \"geometry\"\n",
+    "] = districts4841And4840.unary_union\n",
+    "\n",
+    "# update the name to reflect the entirety of the district\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"district\"] == 4840, \"car_name\"\n",
+    "] = \"Census Agricultural Region 4\"\n",
+    "\n",
+    "# delete district 4841 which is now apart of 4840\n",
+    "gdfProjected.drop(gdfProjected.loc[gdfProjected[\"district\"] == 4841].index)"
    ]
   },
   {
@@ -619,14 +647,6 @@
     "    tblName, gdfStationsHly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95dfb213",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
