agg_ergot is not pushing

--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
+    "from Shared.GenericQueryBuilder import GenericQueryBuilder\n",
     "from Shared.DataService import DataService"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createAggErgotTable():\n",
+    "    query = sq.text(\n",
+    "        f\"\"\"\n",
+    "        CREATE TABLE {TABLENAME} (\n",
+    "            sample_id               SERIAL,\n",
+    "            year                    INT,\n",
+    "            province                VARCHAR,\n",
+    "            crop_district           INT,\n",
+    "            incidence               BOOL,\n",
+    "            severity                FLOAT,\n",
+    "            district                INT,\n",
+    "            percnt_true             FLOAT, \n",
+    "            has_ergot               BOOL, \n",
+    "            sum_severity            FLOAT, \n",
+    "            present_prev1           BOOL, \n",
+    "            present_prev2           BOOL, \n",
+    "            present_prev3           BOOL, \n",
+    "            present_in_neighbor     BOOL, \n",
+    "            severity_prev1          FLOAT, \n",
+    "            severity_prev2          FLOAT, \n",
+    "            severity_prev3          FLOAT, \n",
+    "            severity_in_neighbor    FLOAT,\n",
+    "\n",
+    "            CONSTRAINT PK_agg_ergot_sample PRIMARY KEY(sample_id)\n",
+    "        );\n",
+    "        COMMIT;\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    db.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +246,7 @@
     "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
     "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    queryBuilder = GenericQueryBuilder()\n",
     "    conn = db.connect()\n",
     "\n",
     "    agRegions = pullAgRegions(conn)\n",
@@ -216,15 +256,40 @@
     "    neighbors = calcNeighbors(agRegions)\n",
     "    ergot = createErgotFeatures(ergot, neighbors)\n",
     "\n",
-    "    ergot.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    try:\n",
+    "        results = sq.text(queryBuilder.tableExistsReq(TABLENAME))\n",
+    "        tableExists = queryBuilder.readTableExists(db.execute(results))\n",
+    "\n",
+    "        if(not tableExists):\n",
+    "            createAggErgotTable()\n",
+    "            \n",
+    "        ergot.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    except Exception as e:\n",
+    "        print([f'[ERROR] {e}'])\n",
+    "        \n",
     "    db.cleanup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:63: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:66: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:69: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:37: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
