--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,15 +242,56 @@
     "    listForDF = reshapeDlyData(dates, agg_df, stationData)\n",
     "    final_df = pd.DataFrame(listForDF)\n",
     "\n",
-    "    # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    try:\n",
+    "        final_df.to_csv(path_or_buf='data/aggregatedDly.csv', sep=',', columns=final_df.columns.tolist())\n",
+    "        # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    except Exception as e:\n",
+    "        print('[ERROR]')\n",
+    "        print(e)\n",
+    "    \n",
     "    db.cleanup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing year: 1995\n",
+      "Processing year: 1996\n",
+      "Processing year: 1997\n",
+      "Processing year: 1998\n",
+      "Processing year: 1999\n",
+      "Processing year: 2000\n",
+      "Processing year: 2001\n",
+      "Processing year: 2002\n",
+      "Processing year: 2003\n",
+      "Processing year: 2004\n",
+      "Processing year: 2005\n",
+      "Processing year: 2006\n",
+      "Processing year: 2007\n",
+      "Processing year: 2008\n",
+      "Processing year: 2009\n",
+      "Processing year: 2010\n",
+      "Processing year: 2011\n",
+      "Processing year: 2012\n",
+      "Processing year: 2013\n",
+      "Processing year: 2014\n",
+      "Processing year: 2015\n",
+      "Processing year: 2016\n",
+      "Processing year: 2017\n",
+      "Processing year: 2018\n",
+      "Processing year: 2019\n",
+      "Processing year: 2020\n",
+      "Processing year: 2021\n",
+      "Processing year: 2022\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
