fixed agg_ergot, was not loading into db

--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TABLENAME = \"agg_ergot_sample\"\n",
+    "TABLENAME = \"agg_ergot_samples\"\n",
     "\n",
     "load_dotenv()\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
     "\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"percnt_true\"\n",
-    "            ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n",
+    "            ] = currSamples[\"incidence\"].sum() / len(currSamples)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"has_ergot\"\n",
     "            ] = (currSamples[\"incidence\"].sum() > 0)\n",
@@ -170,17 +170,17 @@
     "\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev1\"\n",
-    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
+    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev2\"\n",
-    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
+    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev3\"\n",
-    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
+    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
     "                \"severity_in_neighbor\",\n",
-    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples.index)\n",
+    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples)\n",
     "\n",
     "    # set any unexpected values to 0\n",
     "    ergot.loc[ergot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
@@ -193,11 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createAggErgotTable():\n",
+    "def createAggErgotTable(db):\n",
     "    query = sq.text(\n",
     "        f\"\"\"\n",
     "        CREATE TABLE {TABLENAME} (\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,9 +261,10 @@
     "        tableExists = queryBuilder.readTableExists(db.execute(results))\n",
     "\n",
     "        if(not tableExists):\n",
-    "            createAggErgotTable()\n",
+    "            createAggErgotTable(db)\n",
     "            \n",
-    "        ergot.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "        ergot.to_sql(TABLENAME, con=conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
+    "        conn.commit()\n",
     "    except Exception as e:\n",
     "        print([f'[ERROR] {e}'])\n",
     "        \n",
@@ -272,21 +273,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:63: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:66: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:69: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\3969227861.py:37: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n"
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:63: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = prev1Year[\"incidence\"].sum() / len(prev1Year)\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:66: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = prev2Year[\"incidence\"].sum() / len(prev2Year)\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:69: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = prev3Year[\"incidence\"].sum() / len(prev3Year)\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:37: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ] = currSamples[\"incidence\"].sum() / len(currSamples)\n"
      ]
     }
    ],
