got correlation plots for weather data and patched bugs

--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,37 +260,24 @@
     "        results = sq.text(queryBuilder.tableExistsReq(TABLENAME))\n",
     "        tableExists = queryBuilder.readTableExists(db.execute(results))\n",
     "\n",
-    "        if(not tableExists):\n",
+    "        if not tableExists:\n",
     "            createAggErgotTable(db)\n",
-    "            \n",
-    "        ergot.to_sql(TABLENAME, con=conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
+    "\n",
+    "        ergot.to_sql(\n",
+    "            TABLENAME, con=conn, schema=\"public\", if_exists=\"replace\", index=False\n",
+    "        )\n",
     "        conn.commit()\n",
     "    except Exception as e:\n",
-    "        print([f'[ERROR] {e}'])\n",
-    "        \n",
+    "        print([f\"[ERROR] {e}\"])\n",
+    "\n",
     "    db.cleanup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:63: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = prev1Year[\"incidence\"].sum() / len(prev1Year)\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:66: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = prev2Year[\"incidence\"].sum() / len(prev2Year)\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:69: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = prev3Year[\"incidence\"].sum() / len(prev3Year)\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_28452\\1152695553.py:37: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ] = currSamples[\"incidence\"].sum() / len(currSamples)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
