--- a/src/WeatherStation/modDist4841.ipynb
+++ b/src/WeatherStation/modDist4841.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,21 +130,21 @@
     "\n",
     "    # get both rows corresponding to district 4840 and 4841 respectively\n",
     "    districts4841And4840 = agRegions.loc[\n",
-    "        (agRegions[\"district\"] == 4840) | (agRegions[\"district\"] == 4841)\n",
+    "        (agRegions[\"car_uid\"] == 4840) | (agRegions[\"car_uid\"] == 4841)\n",
     "    ]\n",
     "\n",
     "    # merge their geometries into the row with district 4840\n",
     "    agRegions.loc[\n",
-    "        agRegions[\"district\"] == 4840, \"geometry\"\n",
+    "        agRegions[\"car_uid\"] == 4840, \"geometry\"\n",
     "    ] = districts4841And4840.unary_union\n",
     "\n",
     "    # update the name to reflect the entirety of the district\n",
     "    agRegions.loc[\n",
-    "        agRegions[\"district\"] == 4840, \"car_name\"\n",
+    "        agRegions[\"car_uid\"] == 4840, \"car_name\"\n",
     "    ] = \"Census Agricultural Region 4\"\n",
     "\n",
     "    # delete district 4841 which is now apart of 4840\n",
-    "    agRegions.drop(agRegions.loc[agRegions[\"district\"] == 4841].index)\n",
+    "    agRegions.drop(agRegions.loc[agRegions[\"car_uid\"] == 4841].index)\n",
     "\n",
     "    # rename the car_uid column to district\n",
     "    agRegions.rename(columns={\"car_uid\": \"district\"}, inplace=True)\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +204,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1/21] Finished updating geography_columns\n",
+      "[2/21] Finished updating geometry_columns\n",
+      "[3/21] Finished updating spatial_ref_sys\n",
+      "[4/21] Finished updating raster_columns\n",
+      "[5/21] Finished updating raster_overviews\n",
+      "[6/21] Finished updating ergot_sample\n",
+      "[7/21] Finished updating ab_hly_station_data\n",
+      "[8/21] Finished updating sk_hly_station_data\n",
+      "[9/21] Finished updating station_data_last_updated\n",
+      "[10/21] Finished updating ab_station_data\n",
+      "[11/21] Finished updating sk_station_data\n",
+      "[12/21] Finished updating mb_station_data\n",
+      "[13/21] Finished updating mb_hly_station_data\n",
+      "[14/21] Finished updating stations_hly\n",
+      "[15/21] Finished updating agg_day_copernicus_satellite_data\n",
+      "[16/21] Finished updating soil_components\n",
+      "[17/21] Finished updating census_ag_regions\n",
+      "[18/21] Finished updating soil_geometry\n",
+      "[19/21] Finished updating soil_surronding_land\n",
+      "[20/21] Finished updating soil_data\n",
+      "[21/21] Finished updating stations_dly\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
